# bandit_with_gmock

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  Rakefile  test.cmake
bandit_with_gmock/: CMakeLists.txt  bandit_with_gmock.hpp
examples/: .gitignore  CMakeLists.txt  Makefile  README.md
examples/base/: main.cpp
examples/src/: main.cpp
lib/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  spec.cpp
test/spec/: bandit_with_gmock_spec.cpp  listener_adapter_spec.cpp
